feat(feature): REI